--- a/playbooks/roles/openvpn/templates/server.conf.j2
+++ b/playbooks/roles/openvpn/templates/server.conf.j2
@@ -1,2 +1,25 @@
-# Server config
+local "Public Ip address"
+port 1194
+proto udp
 dev tun
+ca /etc/openvpn/easy-rsa/keys/ca.crt 
+cert /etc/openvpn/easy-rsa/keys/Server.crt # SWAP WITH YOUR CRT NAME
+key /etc/openvpn/easy-rsa/keys/Server.key # SWAP WITH YOUR KEY NAME
+dh /etc/openvpn/easy-rsa/keys/dh1024.pem # If you changed to 2048, change that here!
+server 10.0.0.0 255.255.255.0
+ifconfig-pool-persist ipp.txt
+push "route 10.0.0.0 255.0.0.0"
+push "dhcp-option DNS 10.0.0.1"
+keepalive 10 120
+comp-lzo
+user nobody
+group nobody
+persist-key
+persist-tun
+status /var/log/openvpn-status.log
+log-append  /var/log/openvpn.log
+verb 3
+
+#Check out the URL https://wiki.alpinelinux.org/wiki/Setting_up_a_OpenVPN_server#Alternative_Certificate_Me#thod
+
+#This will help to start setting up the rest of the steps  
