--- a/playbooks/roles/openvpn/templates/server.conf.j2
+++ b/playbooks/roles/openvpn/templates/server.conf.j2
@@ -20,6 +20,6 @@ status /var/log/openvpn-status.log
 log-append  /var/log/openvpn.log
 verb 3
 
-#Check out the URL https://wiki.alpinelinux.org/wiki/Setting_up_a_OpenVPN_server#Alternative_Certificate_Me#thod
+#Check out the URL https://wiki.alpinelinux.org/wiki/Setting_up_a_OpenVPN_server#Alternative_Certificate_Method
 
-#This will help to start setting up the rest of the steps  
+#This will help with starting the rest of the steps  
